--- a/styles.css
+++ b/styles.css
@@ -13,16 +13,17 @@ canvas {
 
 /* Background image and font */
 body {
+  background: #00FF00;
   background-image: url("snake.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
   font-family: 'Righteous', cursive;
 }
 
 h1 {
   text-align: center;
-  font-size: 85px;
+  float: top;
+  overflow: auto;
+  font-size: 300%;
   text-shadow: 2px 2px 2px #00FF00;
 }
